--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,12 @@ textarea {
    Author's custom styles
    ========================================================================== */
    /* -- Base Header - Footer Styles --*/
+   .content-wrapper {
+    width: 90%;
+    margin: 50px 0;
+  }
+
+  /*-- header styles --*/
 
 header,
 footer {
@@ -96,23 +102,49 @@ footer {
   flex-flow: row wrap;
   }
 
+header {
+    padding: 15px 0;
+  }
+  
+.header-divider {
+    width: 90%;
+  }
+
 header .content-wrapper{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-
+  margin: 0;
   }
+
+  .header-divider {
+    width: 100px;
+    height: 1px;
+    margin: 10px 0 20px 0;
+  }
+
 header nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 
   }
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+
+footer {
+  flex-direction: column;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
 }
 
 footer .social-icons {
@@ -127,13 +159,18 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .copyright {
+  margin: 20px 0;
+}
+
 /*-- Hero Area --*/
 
 .hero-area {
   display: flex;
   justify-content: center;
-  align-items: center;
+  flex-flow: row wrap;
 }
+
 /*-- Aside --*/
 
 aside {
@@ -148,14 +185,30 @@ aside {
 .features {
   display: flex;
   justify-content: center;
+  /* align-items: center; */
   flex-flow: row wrap;
+  /* width: 60%;
+  text-align: center;*/
+}
+
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features article {
+  width: 65%;
+  margin: 30px 0;
 }
 
 .features .features-items {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-flow: row wrap;
+}
+
+.features p {
+  margin: 0;
 }
 
 /*-- reviews ---*/
@@ -164,6 +217,15 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+
+}
+.reviews h3 {
+  width: 60%;
+  margin: 20px 0;
 }
 
 /*-- about page ---*/
@@ -181,6 +243,11 @@ aside {
   align-items: center;
   flex-flow: row wrap;
 }
+
+.contact-content p {
+  margin: 0;
+}
+
 /*-- FAQ Page --*/
 
 .faq {
@@ -191,12 +258,19 @@ aside {
 
 }
 .faq .content-wrapper {
-display: flex;
-justify-content: center;
-align-items: center;
-flex-flow: row wrap;
+  margin: 50px 0 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+.faq h2 {
+  margin-bottom: 40px;
 }
 
+.faq-content {
+  margin-bottom: 50px;
+}
 
 /* ==========================================================================
    Helper classes
