--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,7 @@ aside {
 .features article {
   width: 65%;
   margin: 30px 0;
+  flex-basis: auto;
 }
 
 .features .features-items {
@@ -270,6 +271,7 @@ flex-flow: row wrap;
 
 .faq-content {
   margin-bottom: 50px;
+  flex-basis: auto;
 }
 
 /* ==========================================================================
@@ -362,6 +364,146 @@ flex-flow: row wrap;
 
 @media only screen and (min-width: 35em) {
   /* Style adjustments for viewports that meet the condition */
+}
+
+/* Tablet styles */
+
+@media only screen and (min-width: 768px) {
+  /* General styles */
+
+  .content-wrappper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+
+/* Header */
+
+header {
+  justify-content: space-around;
+  padding: 33px 0;
+}
+
+header .content-wrapper {
+  width: 100%;
+  justify-content: space-around;
+}
+
+header nav {
+  width: 20%;
+}
+
+header nav ul {
+  justify-content: space-between;
+}
+
+.header-divider {
+  display: none;
+
+}
+/* hero area */
+
+/* Aside */
+aside .content-wrapper {
+  margin: 50px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+}
+
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+  width: 40%;
+  margin: 0;
+}
+
+/* features */
+
+.features article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  flex-basis: 50%;
+
+}
+
+.features .features-item-description {
+  width: 50%;
+}
+
+/* reviews */
+.reviews article {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.reviews article div {
+  width: 50%;
+}
+
+/* Footer */
+
+footer .content-wrapper {
+  width: 65%;
+  margin: 100px 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+footer .contact {
+  margin-bottom: 0;
+}
+
+footer .copyright {
+  width: 100%;
+}
+
+/*-- about Page --*/
+
+.mission-content {
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  padding-top: 20px;
+}
+.mission-content p {
+  width: 45%;
+}
+
+.contact-section .content-wrapper h2 {
+  width: 80%;
+}
+
+.contact-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+/*-- FAQ page --*/
+.faq .content-wrapper {
+  justify-content: space-between;
+}
+.faq-content {
+  flex-basis: 45%;
+}
+
+.faq h2 {
+  width: 100%;
+}
+
+}
+
+
+
+@media only screen and (min-width: 1200px) {
+  /* Desktop styles here */
 }
 
 @media print,
