--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,9 @@ header {
   }
   
 .header-divider {
-    width: 90%;
+    width: 100%;
+    height: 1px;
+    margin: 10px 0 20px 0;
   }
 
 header .content-wrapper{
@@ -142,9 +144,17 @@ footer {
   flex-direction: column;
 }
 
+footer p {
+  margin: 0;
+}
+
 footer .content-wrapper {
   width: 55%;
   margin: 50px 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -162,6 +172,8 @@ footer .social-icons p {
 footer .copyright {
   margin: 20px 0;
 }
+
+/*------MOBILE STYLES - Homepage ------*/
 
 /*-- Hero Area --*/
 
@@ -185,10 +197,7 @@ aside {
 .features {
   display: flex;
   justify-content: center;
-  /* align-items: center; */
   flex-flow: row wrap;
-  /* width: 60%;
-  text-align: center;*/
 }
 
 .features h2 {
@@ -198,14 +207,13 @@ aside {
 .features article {
   width: 65%;
   margin: 30px 0;
-  flex-basis: auto;
 }
 
 .features .features-items {
-display: flex;
-justify-content: center;
-align-items: center;
-flex-flow: row wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .features p {
@@ -225,7 +233,7 @@ flex-flow: row wrap;
 
 }
 .reviews h3 {
-  width: 60%;
+  width: 55%;
   margin: 20px 0;
 }
 
@@ -362,11 +370,7 @@ flex-flow: row wrap;
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
-
-/* Tablet styles */
+/*----- TABLET STYLES -----*/
 
 @media only screen and (min-width: 768px) {
   /* General styles */
@@ -398,8 +402,8 @@ header nav ul {
 
 .header-divider {
   display: none;
-
 }
+
 /* hero area */
 
 /* Aside */
@@ -428,7 +432,7 @@ aside .content-wrapper .form {
 }
 
 .features .features-item-description {
-  width: 50%;
+  width: 60%;
 }
 
 /* reviews */
@@ -464,7 +468,7 @@ footer .copyright {
   width: 100%;
 }
 
-/*-- about Page --*/
+/*-- ABOUT Page --*/
 
 .mission-content {
   display: flex;
@@ -486,7 +490,12 @@ footer .copyright {
   align-items: flex-start;
 }
 
-/*-- FAQ page --*/
+/*-- FAQ Page --*/
+
+header {
+  padding: 15px 0;
+}
+
 .faq .content-wrapper {
   justify-content: space-between;
 }
@@ -500,10 +509,54 @@ footer .copyright {
 
 }
 
-
-
 @media only screen and (min-width: 1200px) {
   /* Desktop styles here */
+.content-wrapper {
+  max-width: 960px;
+}
+
+/* Hero */
+.hero-area h1 {
+  width: 60%;
+}
+
+/* Aside */
+aside .content-wrapper {
+  justify-content: space-around;
+}
+
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+  width: 30%;
+}
+
+/* features */
+
+.features h2 {
+  width: 90%;
+}
+.features article {
+  flex-basis: 33%;
+}
+
+
+/* reviews */
+
+.reviews article div {
+  width: 42%;
+}
+
+/*----- ABOUT PAGE -----*/
+.mission h2,
+.contact-section .content-wrapper h2 {
+  width: 95%;
+}
+
+/*----- FAQ PAGE -----*/
+.faq h2 {
+  width: 100%;
+}
+
 }
 
 @media print,
