--- a/css/main.css
+++ b/css/main.css
@@ -86,11 +86,64 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-   /* -- Base Header - Footer Styles --*/
+   /* General Styles */
+
+   html {
+     font-size: 16px;
+
+   }
+   
+   body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    text-align: left;
+   }
+
+   ul, ol {
+     list-style-type: none;
+
+   }
+
+   a {
+     color: #e2e3ed;
+     text-decoration: none;
+   }
+
+   h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 3.75em;
+    font-weight: 500;
+   }
+
+   h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.875em;
+   }
+
+   h3, h4 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.125em;
+    font-weight: 500;
+   }
+
+   p {
+    font-size: .875em;
+    line-height: 1.285;
+   }
+
+   address {
+     font-style: normal;
+
+   }
+
    .content-wrapper {
-    width: 90%;
-    margin: 50px 0;
-  }
+     width: 90%;
+     margin: 50px 0;
+
+   }
+
+   /* -- Base Header - Footer Styles --*/
+
 
   /*-- header styles --*/
 
@@ -120,7 +173,7 @@ header .content-wrapper{
   margin: 0;
   }
 
-  .header-divider {
+.header-divider {
     width: 100px;
     height: 1px;
     margin: 10px 0 20px 0;
@@ -492,9 +545,6 @@ footer .copyright {
 
 /*-- FAQ Page --*/
 
-header {
-  padding: 15px 0;
-}
 
 .faq .content-wrapper {
   justify-content: space-between;
@@ -507,10 +557,13 @@ header {
   width: 100%;
 }
 
-}
-
 @media only screen and (min-width: 1200px) {
   /* Desktop styles here */
+
+header {
+  padding: 15px 0;
+}
+
 .content-wrapper {
   max-width: 960px;
 }
