--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ textarea {
    body {
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
+    color: #e2e3ed;
     text-align: left;
    }
 
@@ -113,22 +114,28 @@ textarea {
     font-family: 'Poppins', sans-serif;
     font-size: 3.75em;
     font-weight: 500;
+    color: #e2e3ed;
+    line-height: 43px;
    }
 
    h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 1.875em;
+    font-weight: 500;
    }
 
    h3, h4 {
     font-family: 'Poppins', sans-serif;
     font-size: 1.125em;
     font-weight: 500;
+    color: #e2e3ed;
+    margin: 20px 0;
    }
 
    p {
     font-size: .875em;
     line-height: 1.285;
+    color: #e2e3ed;
    }
 
    address {
@@ -153,6 +160,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #202322;
   }
 
 header {
@@ -163,6 +171,7 @@ header {
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
+    background: #3a3a3a;
   }
 
 header .content-wrapper{
@@ -185,6 +194,9 @@ header nav {
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
 
   }
 header nav ul {
@@ -195,6 +207,7 @@ header nav ul {
 
 footer {
   flex-direction: column;
+  text-align: center;
 }
 
 footer p {
@@ -224,6 +237,7 @@ footer .social-icons p {
 
 footer .copyright {
   margin: 20px 0;
+  text-align: center;
 }
 
 /*------MOBILE STYLES - Homepage ------*/
@@ -236,6 +250,13 @@ footer .copyright {
   flex-flow: row wrap;
 }
 
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2; 
+}
+
 /*-- Aside --*/
 
 aside {
@@ -243,6 +264,34 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
+}
+
+aside .form {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+ 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /*-- Features --*/
@@ -260,6 +309,7 @@ aside {
 .features article {
   width: 65%;
   margin: 30px 0;
+
 }
 
 .features .features-items {
@@ -270,6 +320,7 @@ aside {
 }
 
 .features p {
+  text-align: center;
   margin: 0;
 }
 
@@ -279,10 +330,12 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 
 }
 .reviews h3 {
@@ -313,6 +366,7 @@ aside {
 /*-- FAQ Page --*/
 
 .faq {
+  background-color: #527128;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -334,6 +388,9 @@ aside {
   margin-bottom: 50px;
   flex-basis: auto;
 }
+
+
+
 
 /* ==========================================================================
    Helper classes
