--- a/css/main.css
+++ b/css/main.css
@@ -243,10 +243,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #527158;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
   }
   
   footer .copyright {
     margin: 20px 0;
+  }
+
+  .social-icons p i {
+    font-size: 1.3125em;
+
   }
   
   
@@ -342,7 +351,7 @@
   .features h2 {
     margin-bottom: 20px;
   }
-  
+
   .features i {
     font-size: 3.75em;
     margin-bottom: 40px;
@@ -366,6 +375,8 @@
     width: 55%;
     margin: 20px 0;
   }
+
+  
   
   /* ==========================================================================
      About Page
@@ -660,6 +671,11 @@
   
     footer p {
         line-height: 1.285;
+    }
+
+    footer .social-icons {
+      width: 12.5em;
+      justify-content: space-between;
     }
   
     footer .copyright {
