Finish the project

--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,7 @@
     background-color: #527158;
     width: 40px;
     height: 40px;
-    border-radius: 50px;
+    border-radius: 50%;
   }
   
   footer .copyright {
@@ -624,6 +624,10 @@
     
     .features .features-item-description {
       width: 62%;
+    }
+
+    .features i {
+      margin-bottom: 30px;
     }
   
     /* Reviews */
