Test site with Devtools

--- a/css/main.css
+++ b/css/main.css
@@ -261,7 +261,6 @@
 
   }
   
-  
   /* -------------------- Mobile Styles - Homepage -------------------- */
   
   /* Hero Area */
@@ -377,9 +376,7 @@
 
   
   
-  /* ==========================================================================
-     About Page
-     ========================================================================== */
+  /* About Page */
   
   .mission {
     background-color: #527158;
@@ -417,9 +414,7 @@
     left: 0;
   }
   
-  /* ==========================================================================
-     FAQ Page
-     ========================================================================== */
+  /* FAQ Page */
   
   .faq {
     background-color: #527158;
@@ -451,13 +446,9 @@
     line-height: 1.333;
   }
   
-  /* ==========================================================================
-     Helper classes
-     ========================================================================== */
+  /* Helper classes */
   
-  /*
-   * Hide visually and from screen readers
-   */
+  /* Hide visually and from screen readers */
   
   .hidden {
     display: none !important;
